--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,8 @@ html.dark {
   html,
   body {
     height: 100%;
+    overscroll-behavior: none;
+    overscroll-behavior-y: none;
   }
 
   body {
